vpc.tf
resource "aws_vpc" "wordpress_vpc" {
  cidr_block           = "10.0.0.0/26"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "wordpress_vpc"
  }
}
